--- a/src/configs/data/all.yaml
+++ b/src/configs/data/all.yaml
@@ -14,8 +14,8 @@ x_range:
   - 2
 
 space_dim: 1
-#directory: /home/shared/prose/sep_types
-directory: dataset/
+directory: /home/shared/prose/sep_types
+#directory: dataset/
 eval_data: null
 train_data: null
 train_data_pairs: null
@@ -78,7 +78,7 @@ IC_types: train
 use_sharedcoeff: false
 IC_range: 1
 param_range_gamma: 0.1
-
+param_range_shift: 1
 
 
 #shallow_water:
