--- a/src/configs/data/all.yaml
+++ b/src/configs/data/all.yaml
@@ -14,10 +14,10 @@ x_range:
   - 2
 
 space_dim: 1
-directory: /home/shared/prose/sep_types
+directory: /gpfs/gibbs/project/lu_lu/ll2249/data
 #directory: dataset/
-eval_data: null
-train_data: null
+eval_data: indomain0
+train_data: indomain0
 train_data_pairs: null
 eval_data_pairs: null
 
@@ -25,6 +25,9 @@ burgers:
   dim: 1
 
 heat:
+  dim: 1
+
+my_heat:
   dim: 1
 
 inviscid_conservation_cubicflux:
